--- a/index.html
+++ b/index.html
@@ -61,6 +61,58 @@
     </header>
     <!-- End Banner & Nav Section -->
 
+    <!-- Start Main Section -->
+    <main class="container mt-5">
+        <section>
+            <h2 mt-5 mb-5>Woman Jacket</h2>
+            <div class="row mt-4 gx-5">
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="card border-0" style="width: 370px;">
+                        <img src="images/jacket-1.png" class="card-img-top" alt="">
+                        <div class="card-body ms-3 me-3">
+                          <h3 class="card-title mb-3">Yellow Coat Jacket </h3>
+                          <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                          <div class="d-flex justify-content-between align-items-center">
+                            <h4 class="text-penguin">$234</h4>
+                            <a href="#" class="btn btn-penguin"><i class="fas fa-shopping-cart me-2"></i>BUY NOW</a>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="col-lg-4 col-md-6 col-12">
+                        <div class="card border-0" style="width: 370px;">
+                            <img src="images/jacket-2.png" class="card-img-top" alt="">
+                            <div class="card-body ms-3 me-3">
+                              <h3 class="card-title mb-3">Ladie s Jacket</h3>
+                              <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                              <div class="d-flex justify-content-between align-items-center">
+                                <h4 class="text-penguin">$234</h4>
+                                <a href="#" class="btn btn-penguin"><i class="fas fa-shopping-cart me-2"></i>BUY NOW</a>
+                              </div>
+                            </div>
+                          </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="col-lg-4 col-md-6 col-12">
+                        <div class="card border-0" style="width: 370px;">
+                            <img src="images/jacket-3.png" class="card-img-top" alt="">
+                            <div class="card-body ms-3 me-3">
+                              <h3 class="card-title mb-3">Woman Leather Jacket</h3>
+                              <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                              <div class="d-flex justify-content-between align-items-center">
+                                <h4 class="text-penguin">$234</h4>
+                                <a href="#" class="btn btn-penguin"><i class="fas fa-shopping-cart me-2"></i>BUY NOW</a>
+                              </div>
+                            </div>
+                          </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <!-- End Main Section -->
 
     <!-- Bootstrap-5 JS Bundle Link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
