Complite man jaket part

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 
     <!-- Start Main Section -->
     <main class="container mt-5">
+        <!-- Start Woman Section -->
         <section>
             <h2 mt-5 mb-5>Woman Jacket</h2>
             <div class="row mt-4 gx-5">
@@ -111,6 +112,57 @@
                 </div>
             </div>
         </section>
+        <!-- Start Woman Section -->
+        <section>
+            <h2 mt-5 mb-5>Man Jacket</h2>
+            <div class="row mt-4 gx-5">
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="card border-0" style="width: 370px;">
+                        <img src="images/jacket-4.png" class="card-img-top" alt="">
+                        <div class="card-body ms-3 me-3">
+                          <h3 class="card-title mb-3">Snowboard Jacket Mens</h3>
+                          <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                          <div class="d-flex justify-content-between align-items-center">
+                            <h4 class="text-penguin">$234</h4>
+                            <a href="#" class="btn btn-penguin"><i class="fas fa-shopping-cart me-2"></i>BUY NOW</a>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="col-lg-4 col-md-6 col-12">
+                        <div class="card border-0" style="width: 370px;">
+                            <img src="images/jacket-5.png" class="card-img-top" alt="">
+                            <div class="card-body ms-3 me-3">
+                              <h3 class="card-title mb-3">Man Leather Jackets</h3>
+                              <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                              <div class="d-flex justify-content-between align-items-center">
+                                <h4 class="text-penguin">$234</h4>
+                                <a href="#" class="btn btn-penguin"><i class="fas fa-shopping-cart me-2"></i>BUY NOW</a>
+                              </div>
+                            </div>
+                          </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="col-lg-4 col-md-6 col-12">
+                        <div class="card border-0" style="width: 370px;">
+                            <img src="images/jacket-6.png" class="card-img-top" alt="">
+                            <div class="card-body ms-3 me-3">
+                              <h3 class="card-title mb-3">Man Casual Jackets</h3>
+                              <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                              <div class="d-flex justify-content-between align-items-center">
+                                <h4 class="text-penguin">$234</h4>
+                                <a href="#" class="btn btn-penguin"><i class="fas fa-shopping-cart me-2"></i>BUY NOW</a>
+                              </div>
+                            </div>
+                          </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Start Man Section -->
+        <!-- End Man Section -->
     </main>
     <!-- End Main Section -->
 
