--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <!-- Start Woman Section -->
         <section>
             <h2 mt-5 mb-5>Woman Jacket</h2>
-            <div class="row mt-4 gx-5">
+            <div class="row gy-5">
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="card border-0" style="width: 370px;">
                         <img src="images/jacket-1.png" class="card-img-top" alt="">
@@ -115,7 +115,7 @@
         <!-- Start Woman Section -->
         <section>
             <h2 mt-5 mb-5>Man Jacket</h2>
-            <div class="row mt-4 gx-5">
+            <div class="row gy-5">
                 <div class="col-lg-4 col-md-6 col-12">
                     <div class="card border-0" style="width: 370px;">
                         <img src="images/jacket-4.png" class="card-img-top" alt="">
