--- a/index.html
+++ b/index.html
@@ -81,46 +81,10 @@
                       </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
-                    <div class="col-lg-4 col-md-6 col-12">
-                        <div class="card border-0" style="width: 370px;">
-                            <img src="images/jacket-2.png" class="card-img-top" alt="">
-                            <div class="card-body ms-3 me-3">
-                              <h3 class="card-title mb-3">Ladie s Jacket</h3>
-                              <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                              <div class="d-flex justify-content-between align-items-center">
-                                <h4 class="text-penguin">$234</h4>
-                                <a href="#" class="btn btn-penguin"><i class="fas fa-shopping-cart me-2"></i>BUY NOW</a>
-                              </div>
-                            </div>
-                          </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 col-12">
-                    <div class="col-lg-4 col-md-6 col-12">
-                        <div class="card border-0" style="width: 370px;">
-                            <img src="images/jacket-3.png" class="card-img-top" alt="">
-                            <div class="card-body ms-3 me-3">
-                              <h3 class="card-title mb-3">Woman Leather Jacket</h3>
-                              <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                              <div class="d-flex justify-content-between align-items-center">
-                                <h4 class="text-penguin">$234</h4>
-                                <a href="#" class="btn btn-penguin"><i class="fas fa-shopping-cart me-2"></i>BUY NOW</a>
-                              </div>
-                            </div>
-                          </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- Start Woman Section -->
-        <section>
-            <h2 mt-5 mb-5>Man Jacket</h2>
-            <div class="row g-5">
-                <div class="col-lg-4 col-md-6 col-12">
                     <div class="card border-0" style="width: 370px;">
-                        <img src="images/jacket-4.png" class="card-img-top" alt="">
+                        <img src="images/jacket-2.png" class="card-img-top" alt="">
                         <div class="card-body ms-3 me-3">
-                          <h3 class="card-title mb-3">Snowboard Jacket Mens</h3>
+                          <h3 class="card-title mb-3">Ladies Jacket </h3>
                           <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                           <div class="d-flex justify-content-between align-items-center">
                             <h4 class="text-penguin">$234</h4>
@@ -130,39 +94,98 @@
                       </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
-                    <div class="col-lg-4 col-md-6 col-12">
-                        <div class="card border-0" style="width: 370px;">
-                            <img src="images/jacket-5.png" class="card-img-top" alt="">
-                            <div class="card-body ms-3 me-3">
-                              <h3 class="card-title mb-3">Man Leather Jackets</h3>
-                              <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                              <div class="d-flex justify-content-between align-items-center">
-                                <h4 class="text-penguin">$234</h4>
-                                <a href="#" class="btn btn-penguin"><i class="fas fa-shopping-cart me-2"></i>BUY NOW</a>
-                              </div>
-                            </div>
+                    <div class="card border-0" style="width: 370px;">
+                        <img src="images/jacket-3.png" class="card-img-top" alt="">
+                        <div class="card-body ms-3 me-3">
+                          <h3 class="card-title mb-3">Woman Leather Jacket</h3>
+                          <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                          <div class="d-flex justify-content-between align-items-center">
+                            <h4 class="text-penguin">$234</h4>
+                            <a href="#" class="btn btn-penguin"><i class="fas fa-shopping-cart me-2"></i>BUY NOW</a>
                           </div>
+                        </div>
+                      </div>
+                </div>
+            </div>
+        </section>
+        <!-- End Woman Section -->
+        <!-- Start Man Section -->
+        <section>
+          <h2 mt-5 mb-5>Man Jacket</h2>
+          <div class="row g-5">
+              <div class="col-lg-4 col-md-6 col-12">
+                  <div class="card border-0" style="width: 370px;">
+                      <img src="images/jacket-4.png" class="card-img-top" alt="">
+                      <div class="card-body ms-3 me-3">
+                        <h3 class="card-title mb-3">Snowboard Jacket Mens</h3>
+                        <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                          <h4 class="text-penguin">$234</h4>
+                          <a href="#" class="btn btn-penguin"><i class="fas fa-shopping-cart me-2"></i>BUY NOW</a>
+                        </div>
+                      </div>
+                    </div>
+              </div>
+              <div class="col-lg-4 col-md-6 col-12">
+                  <div class="card border-0" style="width: 370px;">
+                      <img src="images/jacket-5.png" class="card-img-top" alt="">
+                      <div class="card-body ms-3 me-3">
+                        <h3 class="card-title mb-3">Man Leather Jackets</h3>
+                        <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                          <h4 class="text-penguin">$234</h4>
+                          <a href="#" class="btn btn-penguin"><i class="fas fa-shopping-cart me-2"></i>BUY NOW</a>
+                        </div>
+                      </div>
+                    </div>
+              </div>
+              <div class="col-lg-4 col-md-6 col-12">
+                  <div class="card border-0" style="width: 370px;">
+                      <img src="images/jacket-6.png" class="card-img-top" alt="">
+                      <div class="card-body ms-3 me-3">
+                        <h3 class="card-title mb-3">Man Casual Jackets</h3>
+                        <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <div class="d-flex justify-content-between align-items-center">
+                          <h4 class="text-penguin">$234</h4>
+                          <a href="#" class="btn btn-penguin"><i class="fas fa-shopping-cart me-2"></i>BUY NOW</a>
+                        </div>
+                      </div>
+                    </div>
+              </div>
+          </div>
+      </section>
+        <!-- End Man Section -->
+        
+        <!-- Start Info Section -->
+        <section class="d-lg-flex justify-content-between align-items-center">
+          <div class="info-img order-lg-2">
+            <img src="images/shopping.png">
+          </div>
+            <div class="info-text order-lg-1 mt-5">
+                <div class="card d-flex flex-md-row align-items-center mb-3" style="max-width: 480px; padding: 22px 27px;">
+                    <img src="images/icons/image 12.png" class="me-4" width="78" height="82">
+                    <div class="">
+                        <h3>Find the Perfect Fit</h3>
+                        <p>Everybody is different, which is why we offer styles for every body.</p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-12">
-                    <div class="col-lg-4 col-md-6 col-12">
-                        <div class="card border-0" style="width: 370px;">
-                            <img src="images/jacket-6.png" class="card-img-top" alt="">
-                            <div class="card-body ms-3 me-3">
-                              <h3 class="card-title mb-3">Man Casual Jackets</h3>
-                              <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                              <div class="d-flex justify-content-between align-items-center">
-                                <h4 class="text-penguin">$234</h4>
-                                <a href="#" class="btn btn-penguin"><i class="fas fa-shopping-cart me-2"></i>BUY NOW</a>
-                              </div>
-                            </div>
-                          </div>
+                <div class="card d-flex flex-md-row align-items-center mb-3" style="max-width: 480px; padding: 22px 27px;">
+                    <img src="images/icons/image 13.png" class="me-4" width="78" height="82">
+                    <div class="">
+                        <h3>Free Exchanges</h3>
+                        <p>One of the many reasons you can shop with peace of mind.</p>
+                    </div>
+                </div>
+                <div class="card d-flex flex-md-row align-items-center mb-3" style="max-width: 480px; padding: 22px 27px;">
+                    <img src="images/icons/image 14.png" class="me-4" width="78" height="82">
+                    <div class="">
+                        <h3>Contact Our Seller</h3>
+                        <p>They are here to help you. That's quite literally what we pay them for.</p>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- Start Man Section -->
-        <!-- End Man Section -->
+        <!-- End Info Section -->
     </main>
     <!-- End Main Section -->
 
