--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <!-- End Man Section -->
         
         <!-- Start Info Section -->
-        <section class="d-lg-flex justify-content-between align-items-center">
+        <section class="d-lg-flex justify-content-between align-items-center mb-5">
           <div class="info-img order-lg-2">
             <img src="images/shopping.png">
           </div>
@@ -188,6 +188,9 @@
         <!-- End Info Section -->
     </main>
     <!-- End Main Section -->
+    <footer>
+      <p class="text-center text-muted"><small>Copyright &#169; 2022  Penguin Fashion</small></p>
+    </footer>
 
     <!-- Bootstrap-5 JS Bundle Link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
