--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <section>
             <h2 mt-5 mb-5>Woman Jacket</h2>
             <div class="row g-5">
-                <div class="col-lg-4 col-md-6 col-12">
+                <div class="col-lg-4 col-md-6 col-12" style="width: 370px;">
                     <div class="card border-0" style="width: 370px;">
                         <img src="images/jacket-1.png" class="card-img-top" alt="">
                         <div class="card-body ms-3 me-3">
@@ -80,7 +80,7 @@
                         </div>
                       </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-12">
+                <div class="col-lg-4 col-md-6 col-12" style="width: 370px;">
                     <div class="card border-0" style="width: 370px;">
                         <img src="images/jacket-2.png" class="card-img-top" alt="">
                         <div class="card-body ms-3 me-3">
@@ -93,7 +93,7 @@
                         </div>
                       </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-12">
+                <div class="col-lg-4 col-md-6 col-12" style="width: 370px;">
                     <div class="card border-0" style="width: 370px;">
                         <img src="images/jacket-3.png" class="card-img-top" alt="">
                         <div class="card-body ms-3 me-3">
@@ -113,7 +113,7 @@
         <section>
           <h2 mt-5 mb-5>Man Jacket</h2>
           <div class="row g-5">
-              <div class="col-lg-4 col-md-6 col-12">
+              <div class="col-lg-4 col-md-6 col-12" style="width: 370px;">
                   <div class="card border-0" style="width: 370px;">
                       <img src="images/jacket-4.png" class="card-img-top" alt="">
                       <div class="card-body ms-3 me-3">
@@ -126,7 +126,7 @@
                       </div>
                     </div>
               </div>
-              <div class="col-lg-4 col-md-6 col-12">
+              <div class="col-lg-4 col-md-6 col-12" style="width: 370px;">
                   <div class="card border-0" style="width: 370px;">
                       <img src="images/jacket-5.png" class="card-img-top" alt="">
                       <div class="card-body ms-3 me-3">
@@ -139,7 +139,7 @@
                       </div>
                     </div>
               </div>
-              <div class="col-lg-4 col-md-6 col-12">
+              <div class="col-lg-4 col-md-6 col-12" style="width: 370px;">
                   <div class="card border-0" style="width: 370px;">
                       <img src="images/jacket-6.png" class="card-img-top" alt="">
                       <div class="card-body ms-3 me-3">
@@ -158,7 +158,7 @@
         
         <!-- Start Info Section -->
         <section class="d-lg-flex justify-content-between align-items-center mb-5">
-          <div class="info-img order-lg-2">
+          <div class="info-img order-lg-2 text-center">
             <img src="images/shopping.png">
           </div>
             <div class="info-text order-lg-1 mt-5">
